--- a/SDLTM.Import/SDLTM.Import/SDLTM.Import.csproj
+++ b/SDLTM.Import/SDLTM.Import/SDLTM.Import.csproj
@@ -179,8 +179,21 @@
 		  <Version>2.1.0</Version>
 	  </PackageReference>
 	  <PackageReference Include="Sdl.Core.PluginFramework.Build">
-		  <Version>17.0.0</Version>
+		  <Version>18.0.1</Version>
 	  </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="PluginResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PluginResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="PluginResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
   </PropertyGroup>
